# slam_capstone

./: .gitignore  local_grid.txt  local_map_arr.txt  map042622.pgm  map042622.yaml  map_closed.pgm  map_closed.yaml  presentaton.odp  readme.md  save_code.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/capstone_bringup/share/capstone_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/capstone_bringup/share/capstone_bringup/cmake/: capstone_bringupConfig.cmake  (+1 more)
install/capstone_interfaces/share/capstone_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/capstone_pkg/lib/capstone_pkg/: basic_movement  circle_around  laser_geomtry  lidar_data  occupancy_grid  robot_world  stop_movement  tb3_status  transforms
install/capstone_pkg/share/capstone_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/capstone_pkg_cpp/lib/capstone_pkg_cpp/: odom_map_transform
install/capstone_pkg_cpp/share/capstone_pkg_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/laser_geometry/share/laser_geometry/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/launch/share/launch/: package.bash  package.sh  package.xml  package.zsh
install/launch/share/launch/launch/: tb3.launch.py
log/: latest_build
maps/: local_grid.txt  local_map_arr.txt  rviz2_map_1666655636685317099.pgm  rviz2_map_1666655636685317099.yaml  rviz2_map_1666745713984710126.pgm  rviz2_map_1666745713984710126.yaml  rviz2_map_1666745921679360438.pgm  rviz2_map_1666745921679360438.yaml  rviz2_map_1666906890637391581.pgm  rviz2_map_1666906890637391581.yaml  rviz2_map_1667777521674654856.pgm  rviz2_map_1667777521674654856.yaml  rviz2_map_1668737859205136957.pgm  rviz2_map_1668737859205136957.yaml  rviz2_map_1668738577259813579.pgm  rviz2_map_1668738577259813579.yaml  rviz2_map_1670027649406688822.pgm  rviz2_map_1670027649406688822.yaml  rviz2_map_1670027858440884301.pgm  rviz2_map_1670027858440884301.yaml  rviz2_map_1670028065964838094.pgm  rviz2_map_1670028065964838094.yaml  temp_arr.txt  temp_grid.txt
src/capstone_bringup/: CMakeLists.txt  package.xml
src/capstone_bringup/launch/: capstone_slam.launch.py  display.launch.py  robot_start.launch.py
src/capstone_interfaces/: CMakeLists.txt  package.xml
src/capstone_interfaces/action/: Cartographer.action
src/capstone_interfaces/msg/: TB3Link.msg  TB3Status.msg  TB3Tracker.msg
src/capstone_interfaces/srv/: State.srv  Temperature.srv
src/capstone_pkg/: package.xml  setup.cfg  setup.py
src/capstone_pkg/capstone_pkg/: basic_movement.py  capstone_function.py  circle_around.py  occupancy_grid.py  robot_controller.py  robot_state_pub.py  robot_world.py  scratch.py  tb3_map_client.py  tb3_map_server.py  tb3_status.py  tmp_pub.py  tpm_pub.py  tps_pub.py  transforms.py
src/capstone_pkg_cpp/: CMakeLists.txt  package.xml
src/capstone_pkg_cpp/src/: odom_map_transform.cpp
src/config/: burger.yaml  tb3_description.urdf  tb3_urdf.rviz  tb_descript_temp.urdf
src/opencr/: tps_sensor.ino
(+76 files in other folders)
