<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="huyftw@aim.com">hle</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- add dependencis for launch -->
  <exec_depend>capstone_pkg</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  
  <!-- taken from foxy/share/launch/ to resolve launch error:
  Failed to load entry point 'launch': [Errno 2] No such file or directory: '/home/hle/Desktop/compsci/ros/slam_capstone/install/launch/share/launch/frontend/grammar.lark'

	copying missing files to this directory.  
   -->
  <depend>osrf_pycommon</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-lark-parser</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
